--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ html, body{
     width: 100%;
     max-width: 350px;
     margin: auto;
+    margin-top: 2em;
   }
   .logo_wec{
     position: absolute;
